Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* boolean restrictions now default to being finalized.

* pkgcore.fs.ops.offset_rewriter -> pkgcore.fs.contents.offset_rewriter

* various code cleanups, quite a few conversions to snakeoil.klass
  decorators/property tricks to simplify the code.

* experimental python3.1 support.  Bugs welcome, although till stated
  otherwise, it's considered unsupported.

* pkgcore.restrictions.values.ComparisonMatch has been removed.

* for overlayed repositories that have invalid atom stacking in their
  package.mask, give an appropriate error message indicating the file.

* gentoo bug 196561, PMS doesn't match portage behaviour for '~' atom
  operator.  Being that the pms definition has never been accurate, and
  portage hasn't handled '~' w/ a revision in any sane form, and finally
  do to portage adding a repoman check for this (bug 227225) pkgcore is
  now strict about disallowing revisions with '~'.  Scream at PMS to
  fix their doc if it's problematic.

* certain ebuilds (ssmtp for example) expect D to have a trailing '/'.
  Force this (outside pms compliance, so we match portage behaviour).


pkgcore 0.5.4: October 30, 2009

* minor bug fix release fixing filter-env invocation (wasn't covered
  by tests)


pkgcore 0.5.3: October 30, 2009

* filter-env grew a --print-vars option.  If you've been seeing
  "declare: write error: Broken pipe" from build operations, this should
  now be fixed via using this new option.

* the resolver wasn't properly accounting for planned modifications to
  the installed pkgs database.  If you've had upgrade issues from
  blockers, this is the root cause (pam/pambase in particular).

* eclass scanning is now JIT'd, and the resultant eclass dictionary
  is now marked immutable for safety reasons.

* for portage configuration when PORTDIR_OVERLAY is in use and portdir