@@ -321,9 +321,9 @@ class preinst_contents_reset(triggers.base):
         if engine.offset != '/':
             cs = cs.insert_offset(engine.offset)
         cset.update(cs)
-        cs = map_new_cset_livefs(engine, {'cset':cset}, 'cset')
-        cset.clear()
-        cset.update(cs)
+        #cs = map_new_cset_livefs(engine, {'cset':cset}, 'cset')
+        #cset.clear()
+        #cset.update(cs)
 
 
 class collision_protect(triggers.base):
